--- a/overview/architecture-core-concepts/feature-overview.mdx
+++ b/overview/architecture-core-concepts/feature-overview.mdx
@@ -1,168 +1,111 @@
 ---
-title: "Feature Highlights"
-description: "Get a concise summary of GoogleTest and GoogleMock's main features: xUnit-inspired design, automatic test discovery, rich and custom assertions, flexible test execution options, and advanced mocking capabilities."
+title: "Core Features at a Glance"
+description: "Presents a concise, bulleted overview of major features: automatic test discovery, flexible assertions, user- and type-parameterized tests, mock objects, and various options for running and reporting on tests. Highlights differentiators and maps features to their user and business impact."
 ---
 
-# Feature Highlights
+# Core Features at a Glance
 
-Get a concise summary of GoogleTest and GoogleMock's main features that empower you to write effective, maintainable, and robust C++ tests with ease. These highlights encompass the xUnit-inspired test framework design, automatic discovery and execution of tests, the rich set of assertion and matcher tools, flexible test execution workflows, and GoogleMock's advanced capabilities for creating precise, behavior-driven mock objects.
+GoogleTest and GoogleMock come packed with a comprehensive set of features designed to streamline your C++ testing and mocking workflows. This page provides a focused snapshot of their most impactful capabilities, highlighting how they enable high productivity, flexible test designs, and rigorous verification.
 
----
+## Automatic Test Discovery
+- Discover tests **automatically** without manual registration.
+- Supports test fixtures and parameterized tests.
+- Eliminates boilerplate setup, allowing you to focus on writing tests.
 
-## Why Feature Highlights Matter
+## Flexible Assertions
+- Rich **assertion macros** for expressing expected results.
+- Support for basic conditions, floating-point comparisons, exception checks, and more.
+- Enables clear, readable validation statements aligned with test intent.
 
-Imagine you're setting up a new project or diving into an unfamiliar codebase. Understanding the key features upfront gives you the confidence and clarity on what you can accomplish and how GoogleTest and GoogleMock streamline your testing journey. This page distills those features into actionable insights that help you envision your test design and execution flow.
+## Parameterized and Typed Tests
+- Define tests parametrized by values or types.
+- Write a single test template that runs multiple times for different inputs or types.
+- Promotes reusability and coverage without duplicating test code.
 
----
+## Mock Objects and Interaction Verification
+- Define mock classes using simple macros that auto-generate mock methods.
+- Set expectations on method calls: argument matching, call order, call count, and return behaviors.
+- Supports sophisticated ordering with sequences and partial orders.
+- Rich set of built-in matchers and customizable matchers to specify argument expectations precisely.
+- Control mock object behavior with actions like returning values, invoking callbacks, or chaining side-effects.
 
-## Core Feature Summary
-
-### 1. xUnit-Inspired Testing Framework
-- Structure your tests into **Test Cases and Test Suites** for logical grouping.
-- Use **Test Macros** such as `TEST()` and `TEST_F()` to write readable and maintainable tests.
-- Benefit from **automatic test discovery**, so all your tests run without manual registration.
-
-### 2. Comprehensive and Custom Assertions
-- Rich set of predefined **assertions** (`EXPECT_EQ`, `ASSERT_TRUE`, etc.) ensures expressive validation.
-- Full support for **fatal vs non-fatal failures** to control test flow precisely.
-- Integrate **custom assertions and matchers** to fit your domain-specific scenarios.
-
-### 3. Flexible Test Execution
-- Run tests selectively or in bulk using easy-to-use **filters and flags**.
-- Allow **parameterized and typed tests** to efficiently test multiple data sets and types.
-- Support for **death tests** to verify process termination behavior safely.
-
-### 4. Advanced Mocking with GoogleMock
-- Declarative syntax for **mock class definition** using `MOCK_METHOD`, supporting virtual and overloaded functions.
-- Set detailed expectations on calls with argument **matchers**, **cardinalities**, and **sequences**.
-- Define **default actions** with `ON_CALL()` and expectation-driven actions with `EXPECT_CALL()`, supporting complex behaviors.
-- Tools for controlling test strictness (`NiceMock`, `NaggyMock`, `StrictMock`) to balance test noise and rigor.
-- Support for mocking of methods involving **move-only types**, **delegating calls** to real or fake objects.
+## Running and Reporting Options
+- Command-line flags to filter and run subsets of tests.
+- Detailed failure reports including call stacks and argument values.
+- Configurable verbosity to assist debugging or suppress noise.
 
 ---
 
-## Real-World Workflow Example
+## Why These Features Matter
+These features collectively deliver a testing environment that:
 
+- Makes test writing concise yet expressive.
+- Ensures correctness by verifying not just outcomes but also interactions.
+- Facilitates maintenance by supporting parameterization and reusable mocks.
+- Provides diagnostics and tooling to simplify debugging.
+
+## How This Fits Into Your Workflow
+Start by writing tests with automatic discovery and assertions to validate functionality. When your tests require validating complex interactions or dependencies, create mock objects with clear expectations. Use parameterization to avoid duplication and scale your test coverage efficiently. Control test execution and reporting for your development or CI pipelines.
+
+---
+
+## Related Topics & Next Steps
+- **[Getting Started: Your First Test](../googletest-guides/core-workflows/getting-started-tests)** — Learn how to write and run basic tests.
+- **[Introduction to Mocking with GoogleMock](../googletest-guides/core-workflows/mocking-basics)** — Understand how to create and use mocks.
+- **[Matchers Reference](../api_reference/matchers_assertions/builtin_matchers)** — Explore built-in and custom matchers for argument validation.
+- **[Actions Reference](../api_reference/actions_and_advanced/standard_actions)** — Discover the rich set of actions to define mock behaviors.
+- **[Mocking Reference](../docs/reference/mocking.md)** — Detailed API documentation for mocking constructs.
+
+## Practical Tips
+- Begin with simple assertions and only add mocks when needed to verify interaction.
+- Use sequences and `InSequence` to enforce call order when necessary.
+- Prefer `NiceMock` to suppress harmless warnings during test development.
+
+
+---
+
+For more comprehensive context, visit the [GoogleMock Cookbook](../docs/gmock_cook_book.md) for recipes and best practices to maximize your productivity with mocks.
+
+---
+
+### Example: Combining Assertions, Parameterization, and Mocks
 ```cpp
 #include <gmock/gmock.h>
 #include <gtest/gtest.h>
 
 using ::testing::Return;
-using ::testing::NiceMock;
+using ::testing::InSequence;
 
-class Foo {
-public:
-  virtual ~Foo() {}
-  virtual int Bar(int x) const = 0;
+class MockDatabase {
+ public:
+  MOCK_METHOD(bool, Connect, (), ());
+  MOCK_METHOD(int, GetUserCount, (), (const));
 };
 
-class MockFoo : public Foo {
-public:
-  MOCK_METHOD(int, Bar, (int x), (const, override));
-};
+TEST(DatabaseTest, ConnectionWorks) {
+  MockDatabase db;
 
-TEST(FooTest, BarReturnsExpectedValue) {
-  NiceMock<MockFoo> mock_foo;
-  ON_CALL(mock_foo, Bar).WillByDefault(Return(42));
+  EXPECT_CALL(db, Connect())
+      .WillOnce(Return(true));
 
-  EXPECT_CALL(mock_foo, Bar(5))
-      .Times(1)
-      .WillOnce(Return(100));
+  EXPECT_CALL(db, GetUserCount())
+      .WillOnce(Return(42));
 
-  EXPECT_EQ(mock_foo.Bar(5), 100);  // Expected special case
-  EXPECT_EQ(mock_foo.Bar(10), 42);  // Uses default action
+  EXPECT_TRUE(db.Connect());
+  EXPECT_EQ(42, db.GetUserCount());
+}
+
+TEST(DatabaseTest, MultipleCallsInSequence) {
+  MockDatabase db;
+  {
+    InSequence seq;
+    EXPECT_CALL(db, Connect()).WillOnce(Return(true));
+    EXPECT_CALL(db, GetUserCount()).WillOnce(Return(0));
+  }
+
+  EXPECT_TRUE(db.Connect());
+  EXPECT_EQ(0, db.GetUserCount());
 }
 ```
 
-This example highlights how mocks are defined, default behaviors are set, and strict expectations are declared to catch unexpected usage.
-
 ---
-
-## Best Practices and Practical Tips
-
-- **Set Expectations Before Exercise:** Always declare `EXPECT_CALL` before the tested code invokes the mock.
-- **Use `ON_CALL` for Defaults:** Define default behaviors that don’t have strict call count requirements.
-- **Leverage Matchers:** Use matchers like `_` for wildcards or custom predicates for precise control.
-- **Sequence and Ordering:** Control call order with `InSequence` or `After` when logic depends on invocation order.
-- **Manage Uninteresting Calls:** Use `NiceMock` to suppress warnings or `StrictMock` to treat unexpected calls as errors.
-- **Delegate to Fakes or Real Objects:** Avoid duplication by forwarding calls to real or fake implementations when appropriate.
-
----
-
-## Diagram of Core GoogleMock Testing Interaction
-
-```mermaid
-sequenceDiagram
-  participant Test as Test Code
-  participant Mock as Mock Object
-  participant Real as Real or Fake Object
-
-  Test ->> Mock: Call mocked method
-  Mock -->> Test: Check expectations
-  alt Expectation matches
-    Mock ->> Real: Delegate call (optional)
-    Real -->> Mock: Return result
-    Mock -->> Test: Return result or perform action
-  else Unexpected call
-    Mock -->> Test: Report failure
-  end
-```
-
----
-
-## Troubleshooting Common Issues
-
-<AccordionGroup title="Common Challenges and Solutions">
-<Accordion title="Uninteresting Mock Function Calls Warning">
-When a mock method is called without a prior `EXPECT_CALL`, GoogleMock will emit a warning.
-
-**Solution:**
-- Use `EXPECT_CALL` if you expect specific calls.
-- Use `ON_CALL` for default actions.
-- Wrap the mock in `NiceMock<>` to suppress warnings on uninteresting calls.
-</Accordion>
-<Accordion title="Failure Due to Call Order">
-If your test fails because calls happen in an unexpected order:
-
-**Solution:**
-- Use sequences (`InSequence`) to explicitly enforce order.
-- Use the `After` clause to specify partial order constraints.
-</Accordion>
-<Accordion title="Mocking Non-Virtual or Free Functions">
-GoogleMock works best with virtual methods.
-
-**Solutions:**
-- Refactor to introduce interfaces.
-- Use mock functions or `MockFunction` for callbacks.
-- Use dependency injection with templates for non-virtual functions.
-</Accordion>
-<Accordion title="Move-Only Types in Mock Methods">
-If mocking methods with `std::unique_ptr` or other move-only types:
-
-**Solution:**
-- Use `MOCK_METHOD` as usual (supported since 2017).
-- Return values via lambdas/`WillOnce` instead of `Return` to generate fresh instances.
-- Refer to legacy workarounds only if stuck on older versions.
-</Accordion>
-</AccordionGroup>
-
----
-
-## Next Steps
-
-To get started leveraging these features:
-
-- Proceed to the [GoogleTest Primer](../about-googletest/introduction.md) for foundational concepts.
-- Read the [Getting Started with Mock Objects](../../guides/mocking-and-test-doubles/getting-started-with-mocks.md) guide for hands-on mock creation.
-- Explore the [gMock Cookbook](../../docs/gmock_cook_book.md) for advanced mocking techniques and recipes.
-
----
-
-**Explore more:**
-- [Mocking Reference](../../reference/mocking.md) - Deep dive on mocking facilities.
-- [Matchers Reference](../../reference/matchers.md) - Full list of built-in matchers.
-- [Actions Reference](../../reference/actions.md) - Available mock actions.
-
----
-
-This concise feature overview provides the essential pillars enabling you to write, maintain, and scale your C++ tests effectively with GoogleTest and GoogleMock.
